--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Title</h1>
+    <section class="main">
+      <h1 class="main__title">Guess the Doggo</h1>
+      <p class="main__description">What breed is the dog in this image?</p>
+      <div class="main__img-container">
+        <img clas="img" src="#" alt="dog" />
+      </div>
+      <button class="main__btn">Placeholder text</button>
+      <button class="main__btn">Placeholder text</button>
+      <button class="main__btn">Placeholder text</button>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
