Add style rules for html elements on page
All html elements have been applied their styling rules to style the page.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="main__img-container">
         <img clas="img" src="#" alt="dog" />
       </div>
-      <button class="main__btn">Placeholder text</button>
+      <button class="main__btn main__btn--0margin">Placeholder text</button>
       <button class="main__btn">Placeholder text</button>
       <button class="main__btn">Placeholder text</button>
     </section>
