--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1 class="main__title">Guess the Doggo</h1>
       <p class="main__description">What breed is the dog in this image?</p>
       <div class="main__img-container">
-        <img clas="main__img" src="#" alt="dog" />
+        <img class="main__img" src="#" alt="dog" />
       </div>
       <button class="main__btn main__btn--0margin">Placeholder text</button>
       <button class="main__btn">Placeholder text</button>
