Make pictures and answers rotate with page reload
Picture and answers now rotate with page reload, becaues of local
storage variable.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <h1 class="main__title">Guess the Doggo</h1>
       <p class="main__description">What breed is the dog in this image?</p>
       <div class="main__img-container">
-        <img class="main__img" src="#" alt="dog" />
+        <img class="main__img" src="dogs/german.webp" alt="dog" />
       </div>
-      <button class="main__btn main__btn--0margin">Placeholder text</button>
-      <button class="main__btn">Placeholder text</button>
-      <button class="main__btn">Placeholder text</button>
+      <button class="main__btn main__btn--0margin">German Shepard</button>
+      <button class="main__btn">English Setter</button>
+      <button class="main__btn">Bull dog</button>
     </section>
     <script src="app.js"></script>
   </body>
